--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14-alpine
 WORKDIR /app
-COPY ./app/package.json ./
-COPY ./app/yarn.lock ./
+COPY package.json ./
+COPY yarn.lock ./
 RUN yarn install --frozen-lockfile
 COPY . .
 EXPOSE 9000
