--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,9 @@ version: "3"
 services:
   app:
     build:
-      context: .
+      context: ./app
       dockerfile: Dockerfile
     container_name: kanban.exercise.com
-    command: yarn run start
-    volumes:
-      - ./app/node_modules
-      - ./app:/app
+    command: yarn start
     ports:
       - "9000:9000"
