Refactor API to double linked list

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: kanban.exercise.com
     command: yarn start
+    volumes:
+      - ./app/src:/app/src/
     ports:
       - "9000:9000"
