--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.18.6",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
