--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.5",
     "sass": "^1.52.1",
     "uuid": "^8.3.2"
   },
@@ -22,6 +23,9 @@
     "@babel/core": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
