--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.5",
     "sass": "^1.52.1",
@@ -24,6 +25,7 @@
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.18",
+    "@types/react-modal": "^3.13.1",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.5",
