--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "13.1.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-modal": "^3.15.1",
@@ -27,6 +28,7 @@
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.18",
+    "@types/react-beautiful-dnd": "13.1.2",
     "@types/react-modal": "^3.13.1",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
